Adding ResponseEntity and error handling in service layer